# flowmode

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  main.rs  pomodoro.rs  storage.rs  title_parser.rs  tracker.rs  tray.rs  tui.rs  web.rs
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.svelte  app.css
web/src/lib/: api.js
